--- a/src/marketing.pug
+++ b/src/marketing.pug
@@ -38,7 +38,7 @@ html(lang="ru", dir="ltr")
                         path(style="fill: url(#gradient); filter: url(#shadow);" d="M10,90c0-44.2,35.8-80,80-80s80,35.8,80,80 M10,90c0,44.2,35.8,80,80,80s80-35.8,80-80 M111.3,90c0,11.7-9.5,21.3-21.3,21.3S68.7,101.7,68.7,90 M111.3,90c0-11.7-9.5-21.3-21.3-21.3S68.7,78.3,68.7,90")
             .container
                 .row
-                    .col-xl-5.offset-xl-1.align-items-center
+                    .col-xl-6.col-md-8.col-10.offset-md-2.offset-xl-1
                         h1.heading Интернет-маркетинг под ключ
                         .offer.last Разработаем систему привлечения новых клиентов индивидуально для вашего бизнеса
         .content
@@ -47,11 +47,11 @@ html(lang="ru", dir="ltr")
                     .col-xl-10
                         h2.heading.margin-bottom Зачем нужен интернет-маркетинг?
                 .row.justify-content-between.align-items-center
-                    .col-xl-5
+                    .col-xl-5.col-lg-6
                         p.offer Вы задумывались, что побуждает пользователя сделать заказ услуги или купить товар на сайте? Конечно, во многом - это ваша заслуга. Вы предлагаете товар, который нравится людям и они его покупают. 
                         p.offer Однако, чтобы люди узнали об уникальной услуге или особенном товаре, нужна командная работа профессиональных интернет-маркетологов. Именно они могут не только грамотно рассказать об уникальных свойствах продукта, но и привлечь заинтересованную целевую аудиторию. 
-                        p.offer.last Интернет-маркетинг - универсальный инструмент для любого бизнеса. Он необходим всем отраслям, потому что решает сразу несколько важных задач. 
-                    .col-xl-4
+                        p.offer.last-xl Интернет-маркетинг - универсальный инструмент для любого бизнеса. Он необходим всем отраслям, потому что решает сразу несколько важных задач. 
+                    .col-xl-4.col-lg-4
                         ol.list.list_ol
                             li.list__item Повышение узнаваемости бренда
                             li.list__item Возвращение ушедших клиентов
@@ -132,9 +132,9 @@ html(lang="ru", dir="ltr")
                         p.offer После всех проведенных на сайте работ, конверсия выросла с 0,1% до 13%. 
                         p.offer.last Благодаря тщательной работе с возражениями, редизайну и качественной проработке инфомационных блоков, с ресурса начали поступать заявки. Точно настроенная реклама обеспечивала стабильный рост заинтересованной аудитории и, как следствие, заявок с сайта.
                 .row
-                    .col-xl-5.margin-bottom
+                    .col-lg-5.margin-bottom
                         img.img-fluid(src="../images/default.png")
-                    .col-xl-5.margin-bottom
+                    .col-lg-5.margin-bottom
                         img.img-fluid(src="../images/default.png")
                     .col-xl-10
                         a.btn.btn_primary(href="#") Хочу такой же результат
@@ -145,7 +145,7 @@ html(lang="ru", dir="ltr")
                         .heading.heading_small Сколько стоит интернет-маркетинг?
                         .offer В зависимости от конкурентности тематики сайта, а также поставдленных задач, рассчитывается стоимость предоставляемых услуг. Также вы можете выбрать пакетное предложение, которое поможет достичь поставленных целей без больших затрат.
                 .row.align-items-center.justify-content-center
-                    .col-xl-3.col-lg-5.p-relative
+                    .col-xl-3.col-lg-3.p-relative
                         img.element.element_1(src="../images/comment/dev_comment_0.png")
                         .price
                             .price__header Есть SEO-продвижение
@@ -153,14 +153,14 @@ html(lang="ru", dir="ltr")
                                 p.text-uppercase.text-bold В предложение входит
                                 p вы ставите задачу — мы формируем пакет услуг подходящий под ваши цели. В конце месяца предоставляем отчет о работе и результатах
                             .price__footer стоимость 15к+
-                    .col-xl-3.col-lg-5
+                    .col-xl-3.col-lg-4
                         .price.price_large
                             .price__header Есть реклама
                             .price__content
                                 p.text-uppercase.text-bold В предложение входит
                                 p займемся технической оптимизацией, улучшением информации на сайте и внешнего вида - предложение сформируем исходя из ваших целей
                             .price__footer стоимость 25к+
-                    .col-xl-3.col-lg-5.p-relative
+                    .col-xl-3.col-lg-3.p-relative
                         img.element.element_3(src="../images/comment/dev_comment_1.png")
                         .price
                             .price__header Нужно больше заказов
@@ -170,8 +170,8 @@ html(lang="ru", dir="ltr")
                             .price__footer стоимость 35к+
             .container.content_price__container
                 .row.justify-content-center
-                    .col-xl-7.text-center
-                        .heading.heading_small Окончательную цену вы можете узнать на консультации
+                    .col-lg-7.text-center
+                        .heading.heading_small Окончательную цену вы можете узнать на&nbsp;консультации
                         .offer.last Стоимость услуги рассчитывается индивидуально в зависимости от проекта. При расчете мы учитываем направление деятельности, а также что именно вы ожидаете получить в качестве результата. После консультации и предварительного анализа вашего ресурса мы составляем список услуг и озвучиваем стоимость. 
         .content.content_contact
             .container
