--- a/src/css/media.scss
+++ b/src/css/media.scss
@@ -1,6 +1,6 @@
-@media(max-width: 1200px){
+@media(max-width: 1400px){
     .margin-bottom-lg{
-        margin-bottom: 30px;
+        margin-bottom: 50px;
     }
     .header{
         &__nav{
@@ -15,6 +15,19 @@
         }
         &_contact{
             .form_inline{
+                margin-bottom: 40px;
+            }
+        }
+        &_price{
+            .element{
+                display: none;
+            }
+        }
+        &_padding {
+            padding: 100px 0;
+        }
+        .offer{
+            &.last-xl{
                 margin-bottom: 40px;
             }
         }
@@ -55,18 +68,25 @@
                     right: 0;
                 }
             }
-            &_price{
-                .element{
-                    display: none;
-                }
-            }
         }
     }
-    .dev{
+    .marketing{
         .content{
-            &_price{
+            &_padding {
                 .element{
-                    display: none;
+                    width: 280px;
+                }
+            }
+            &_color{
+                .row{
+                    .column{
+                        max-width: calc(100%/3);
+                        .heading {
+                            font-size: 18px;
+                            line-height: 24px;
+                            white-space: normal;
+                        }
+                    }
                 }
             }
         }
@@ -132,26 +152,6 @@
                     bottom: 60px;
                 }
             }
-            &_price{
-                .element{
-                    display: block;
-                }
-                .element_1 {
-                    width: 210px;
-                    top: -10px;
-                    left: 0;
-                }
-                .element_2{
-                    width: 190px;
-                    bottom: -30px;
-                    right: 0;
-                }
-                .element_3 {
-                    width: 180px;
-                    top: 130px;
-                    right: 0;
-                }
-            }
             &_element{
                 .element{
                     display: none;
@@ -171,25 +171,29 @@
                     display: none;
                 }
             }
-            &_price{
-                .element{
-                    display: block;
+        }
+    }
+    .marketing{
+        .content_color{
+            padding: 50px 0;
+            .row{
+                flex-wrap: wrap;
+                .column{
+                    max-width: 100%;
+                    & + .column{
+                        margin-top: 50px;
+                    }
+                    .heading {
+                        font-size: 26px;
+                        line-height: 34px;
+                        white-space: normal;
+                        margin-bottom: 20px;
+                        & + .offer {
+                            margin-top: 20px;
+                        }
+                    }
                 }
-                .element_1 {
-                    width: 210px;
-                    top: -10px;
-                    left: 0;
-                }
-                .element_2{
-                    width: 190px;
-                    bottom: -50px;
-                    right: 0;
-                }
-                .element_3 {
-                    width: 180px;
-                    top: 130px;
-                    right: 0;
-                }
+                
             }
         }
     }
@@ -280,6 +284,11 @@
             & + .list__item{
                 margin-top: 20px;
             }
+        }
+    }
+    .form{
+        .input-inline{
+            font-size: 16px;
         }
     }
     .ad{
@@ -384,10 +393,7 @@
             }
         }
         &_contact{
-            padding-bottom: 60px;
-            .heading{
-                margin-top: 40px;
-            }
+            padding-bottom: 50px;
             .form{
                 .input-text{
                     float: none;
@@ -426,6 +432,14 @@
         &__item{
             width: 200px;
             height: 190px;
+        }
+    }
+    .form{
+        .input-text{
+            font-size: 14px;
+        }
+        .input-inline{
+            font-size: 14px;
         }
     }
     .btn{
@@ -494,6 +508,19 @@
                 &__elements {
                     display: none;
                 }
+            }
+        }
+    }
+    .marketing{
+        .content{
+            &_form{
+                .heading{
+                    font-size: 22px;
+                    line-height: 28px;
+                }
+            }
+            .list{
+                padding: 20px;
             }
         }
     }
