--- a/src/css/media.scss
+++ b/src/css/media.scss
@@ -2,6 +2,7 @@
     .margin-bottom-lg{
         margin-bottom: 50px;
     }
+    .text-lg-center{text-align: center;}
     .header{
         &__nav{
             right: calc((100% - 960px)/2 + 20px);
@@ -94,6 +95,23 @@
 }
 @media(max-width: 992px){
     .d-flex-md{display: flex;}
+    .margin-top-md-none{
+        margin-top: 0px;
+        &.margin-top{margin-top: 0px;}
+    }
+    .margin-top-md{
+        margin-top: 30px;
+        &.margin-top{margin-top: 30px;}
+    }
+    .margin-bottom-md-none{
+        margin-bottom: 0px;
+        &.margin-bottom{margin-bottom: 0px;}
+    }
+    .margin-bottom-md{
+        margin-bottom: 30px;
+        &.margin-bottom{margin-bottom: 30px;}
+    }
+
     .header{
         &__logo{
             padding-top: 40px;
@@ -194,6 +212,16 @@
                     }
                 }
                 
+            }
+        }
+    }
+    .seo{
+        .content{
+            .col-comment{
+                padding-top: 50px;
+                .element_comment{
+                    display: none;
+                }
             }
         }
     }
@@ -304,6 +332,17 @@
         .item{
             &__header{
                 font-size: 28px;
+            }
+        }
+    }
+    .seo{
+        .content{
+            &_color{
+                .elements{
+                    width: 100px;
+                    margin: 40px auto;
+                    display: block;
+                }
             }
         }
     }
@@ -521,6 +560,20 @@
             }
             .list{
                 padding: 20px;
+            }
+        }
+    }
+    .seo{
+        .content{
+            &_title{
+                .heading{
+                    font-size: 28px;
+                    line-height: 38px;
+                    word-break: break-word;
+                }
+            }
+            .col-comment{
+                padding-top: 50px;
             }
         }
     }
