--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -12,7 +12,9 @@
         color: $yellow;
 
         transition: .3s;
-
+        &:hover{
+            color: lighten($color: $yellow, $amount: 5%);
+        }
         &_inside{
             top: 30px;
         }
@@ -32,6 +34,7 @@
         }
         &.header__logo_inside{
             width: 200px;
+            max-width: 100%;
         }
     }
     &__nav{
