--- a/src/css/_page.scss
+++ b/src/css/_page.scss
@@ -2,9 +2,15 @@
     .header__email{
         padding-top: 30px;
     }
+    .header__logo{
+        padding-top: 80px;
+    }
 }
 .page{
     padding-top: 80px;
+    &.blog{
+        overflow: hidden;
+    }
     &__image{
         height: 350px;
         background-position: center;
@@ -31,29 +37,33 @@
         font-size: 18px;
         line-height: 28px;
         .heading{
-            font-size: 54px;
-            line-height: 58px;
+            font-size: 50px;
+            line-height: 54px;
             color: $black;
         }
         h2{
             font-size: 44px;
             line-height: 50px;
-            margin-bottom: 20px;
+            margin-top: 30px;
+            margin-bottom: 30px;
         }
         h3{
             font-size: 28px;
             line-height: 34px;
-            margin-bottom: 20px;
+            margin-top: 30px;
+            margin-bottom: 30px;
         }
         h4{
             font-size: 24px;
             line-height: 30px;
-            margin-bottom: 20px;
+            margin-top: 30px;
+            margin-bottom: 30px;
         }
         h5{
             font-size: 18px;
             line-height: 24px;
-            margin-bottom: 20px;
+            margin-top: 30px;
+            margin-bottom: 30px;
         }
         p{
             font-size: 18px;
