--- a/src/css/media.scss
+++ b/src/css/media.scss
@@ -225,6 +225,70 @@
             }
         }
     }
+    .blog{
+        .header{
+            &__logo{
+                padding-top: 50px;
+            }
+            &__email{
+                left: 60px;
+                right: auto;
+                padding-top: 60px;
+            }
+        }
+        .heading{
+            font-size: 32px;
+            line-height: 40px;
+        }
+    }
+    .inside-page{
+        .header__nav{
+            top: 5px;
+        }
+    }
+    .page{
+        &__image{
+            height: 300px;
+        }
+        &__info{
+            // flex-wrap: wrap;
+            .page__date,
+            .page__person,
+            .page__reading{
+                font-size: 12px;
+                padding: 10px 20px;
+            }
+            .page__person{
+                padding: 10px 0;
+            }
+        }
+        &__content {
+            padding: 40px 20px 20px;
+            font-size: 16px;
+            line-height: 24px;
+            .heading {
+                font-size: 36px;
+                line-height: 40px;
+                margin-bottom: 40px;
+            }
+            h2{
+                font-size: 32px;
+                line-height: 38px;
+            }
+            h3{
+                font-size: 26px;
+                line-height: 32px;
+            }
+            p{
+                font-size: 16px;
+                line-height: 24px;
+            }
+            blockquote{
+                padding-left: 40px;
+                background: url('../images/icons/quotes.svg') no-repeat left top / 25px;
+            }
+        }
+    }
 }
 @media(max-width: 768px){
     .margin-top-sm-none{
@@ -345,7 +409,7 @@
                 }
             }
         }
-    }
+    }    
 }
 @media(max-width: 576px){
     .margin-top-xs-none{
@@ -576,5 +640,74 @@
                 padding-top: 50px;
             }
         }
+    }
+    .blog{
+        .header{
+            &__email{
+                left: 20px;
+                padding-top: 90px;
+            }
+        }
+    }
+    .page{
+        &__image{
+            height: 200px;
+            margin-left: -20px;
+            margin-right: -20px;
+        }
+        &__info{
+            padding: 15px 0;
+            margin-left: -20px;
+            margin-right: -20px;
+            flex-wrap: wrap;
+            .page__date,
+            .page__person,
+            .page__reading{
+                font-size: 14px;
+                width: 100%;
+                padding: 5px 20px;
+                margin: 0;
+            }
+        }
+        &__content {
+            padding: 40px 20px 20px;
+            margin-left: -20px;
+            margin-right: -20px;
+            font-size: 14px;
+            line-height: 22px;
+            .heading {
+                font-size: 26px;
+                line-height: 30px;
+                margin-bottom: 40px;
+            }
+            h2{
+                font-size: 24px;
+                line-height: 28px;
+                margin-bottom: 20px;
+            }
+            h3{
+                font-size: 20px;
+                line-height: 26px;
+            }
+            h4{
+                font-size: 18px;
+                line-height: 24px;
+            }
+            h5{
+                font-size: 16px;
+                line-height: 24px;
+            }
+            p{
+                font-size: 14px;
+                line-height: 22px;
+            }
+            blockquote{
+                padding-left: 30px;
+                background: url('../images/icons/quotes.svg') no-repeat left top / 20px;
+            }
+        }
+    }
+    .inside-page .header__email{
+        left: 0;
     }
 }
