--- a/src/blog_inside.pug
+++ b/src/blog_inside.pug
@@ -4,7 +4,45 @@ html(lang="ru", dir="ltr")
         script(src="./js/jquery.min.js")
         script(src="./js/jquery.inputmask.js")
         script(src="./js/app.min.js")
-        include chunks/header.pug
+        header.header
+            .container
+                .row
+                    .col-12.col-md-2.col-xl-1
+                        svg.header__logo(viewBox="0 0 80 320" preserveAspectRatio="xMidYMin meet" x="0px" y="0px")
+                            g
+                                path.header__logo__path(d="M73.8,119.8c0-19.6-15.9-35.4-35.4-35.4S3,100.3,3,119.8s15.8,35.4,35.4,35.4l0,0C57.9,155.2,73.8,139.4,73.8,119.8zM28.5,119.8c0-5.4,4.4-9.8,9.8-9.8s9.8,4.4,9.8,9.8c0,5.4-4.4,9.8-9.8,9.8C32.9,129.7,28.5,125.3,28.5,119.8L28.5,119.8L28.5,119.8z")
+                                path.header__logo__path(d="M73.8,268.3c0-19.6-15.9-35.5-35.4-35.5C18.8,232.8,3,248.7,3,268.3c0,19.5,15.8,35.4,35.4,35.4l0,0C57.9,303.7,73.8,287.8,73.8,268.3z M28.5,268.3c0-5.4,4.4-9.8,9.8-9.8s9.8,4.4,9.8,9.8s-4.4,9.8-9.8,9.8l0,0C32.9,278.1,28.5,273.7,28.5,268.3L28.5,268.3L28.5,268.3z")
+                                g
+                                    rect.header__logo__path(x="40.3" y="165.8" width="33.5" height="56.7")
+                                    rect.header__logo__path(x="3" y="165.8" width="32.5" height="56.7")
+                                path.header__logo__path(d="M69,131.4")
+                                g
+                                    path.header__logo__path(d="M70.8,22.2c0.6,1.9-0.5,3.5-1.8,5.1c-6.3,7.7-12.4,15.3-18.7,23C46,55.6,41.7,60.9,37.2,66c-4,4.5-8.9,7.5-15.2,7.5c-7.5,0.2-14.5-3.7-18.4-10.1c-2.5-4-3.7-8.7-3.6-13.5C0,49,0.3,48,0.9,47.3c6.4-8.9,12.9-17.8,19.5-26.5c4.4-6,9.5-11.4,15.4-16C41,0.6,47.8-1,54.4,0.6c5.3,1.2,9.9,4.6,12.7,9.3C69.5,13.4,70.8,17.7,70.8,22.2z")
+                                    path.header__logo__path(d="M0.2,38.4l0-37.6h30L0.2,38.4z")
+                                    path.header__logo__path(d="M70.9,68.9H42.4l28.5-34.7V68.9z")
+                    .col-12.col-md-4.col-xl-2
+                        a.header__email(href="mailto:work@websoho.ru") work@websoho.ru
+            svg.header__nav#header__nav(version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve")
+                g
+                    path.header__nav__path(d="M6.979,271.181c30.288,25.979,64.616,55.426,131.017,55.426c66.403-0.001,100.733-29.447,131.022-55.426c28.644-24.568,53.382-45.787,104.98-45.787c51.599,0,76.337,21.219,104.98,45.787c8.385,7.191,21.011,6.225,28.202-2.159c7.191-8.385,6.225-21.011-2.16-28.202c-30.289-25.979-64.619-55.426-131.022-55.426S273.265,214.84,242.976,240.82c-28.644,24.568-53.382,45.787-104.98,45.787c-51.597,0-76.332-21.218-104.974-45.787c-8.384-7.191-21.01-6.226-28.202,2.159C-2.372,251.363-1.405,263.99,6.979,271.181z")
+                    path.header__nav__path(d="M6.979,161.787c30.287,25.98,64.615,55.426,131.017,55.426c66.403,0,100.733-29.446,131.022-55.426C297.662,137.219,322.399,116,373.998,116c51.597,0,76.335,21.218,104.98,45.787c8.385,7.193,21.01,6.224,28.201-2.161c7.192-8.384,6.223-21.012-2.161-28.202C474.729,105.444,440.399,76,373.998,76c-66.403,0-100.733,29.446-131.022,55.426c-28.644,24.568-53.382,45.787-104.98,45.787c-51.596,0-76.332-21.218-104.974-45.787c-8.384-7.192-21.011-6.226-28.202,2.159C-2.372,141.969-1.405,154.596,6.979,161.787z")
+                    path.header__nav__path(d="M505.02,350.213c-30.289-25.979-64.619-55.426-131.022-55.426s-100.733,29.446-131.022,55.426C214.332,374.781,189.594,396,137.996,396c-51.594,0-76.331-21.218-104.973-45.785l-0.002-0.002c-8.384-7.189-21.009-6.223-28.201,2.16c-7.191,8.384-6.224,21.011,2.16,28.202C37.268,406.555,71.597,436,137.996,436c66.403,0,100.733-29.446,131.022-55.426c28.644-24.568,53.382-45.787,104.98-45.787c51.599,0,76.337,21.219,104.98,45.787c8.385,7.191,21.011,6.225,28.202-2.159C514.371,370.03,513.405,357.404,505.02,350.213z")
+            
+            .nav
+                ul.header__navbar
+                    li.header__navbar__item
+                        a.header__navbar__link(href="#") Верстка и разработка
+                    li.header__navbar__item
+                        a.header__navbar__link(href="#") Реклама
+                    li.header__navbar__item
+                        a.header__navbar__link(href="#") Продвижение
+                    li.header__navbar__item
+                        a.header__navbar__link(href="#") Портфолио
+                    li.header__navbar__item
+                        a.header__navbar__link(href="#") Блог
+                    li.header__navbar__item
+                        a.header__navbar__link(href="#") Дизайн
+                a.nav__close#navbarClose Закрыть меню
         .blog.page
             .blog__elements.elements_01
                 svg(viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet")
@@ -36,9 +74,13 @@ html(lang="ru", dir="ltr")
                     .col-sm-10.col-xl-8
                         .page__image(style="background-image:url('../images/image_blog.png');")
                         .page__info.bg-grey
-                            .page__date 16 апреля 2019
-                            .page__person Автор публикации: 
-                                span.text-color Елена Павлова
+                            .page__breadcrumb.breadcrumb
+                                .breadcrumb__item 
+                                    a(href="#") Главная
+                                .breadcrumb__item 
+                                    a(href="#") Блог
+                                .breadcrumb__item 
+                                    span 6 способов прокачать первый экран на вашем сайте
                             .page__reading Время чтения: 
                                 span.text-bold 5 минут
                         .page__content
