--- a/src/css/media.scss
+++ b/src/css/media.scss
@@ -294,11 +294,11 @@
                 line-height: 40px;
                 margin-bottom: 40px;
             }
-            h2{
+            h2,.h2{
                 font-size: 32px;
                 line-height: 38px;
             }
-            h3{
+            h3,.h3{
                 font-size: 26px;
                 line-height: 32px;
             }
@@ -716,20 +716,20 @@
                 line-height: 30px;
                 margin-bottom: 40px;
             }
-            h2{
+            h2,.h2{
                 font-size: 24px;
                 line-height: 28px;
                 margin-bottom: 20px;
             }
-            h3{
+            h3,h3{
                 font-size: 20px;
                 line-height: 26px;
             }
-            h4{
+            h4,h4{
                 font-size: 18px;
                 line-height: 24px;
             }
-            h5{
+            h5,.h5,h6,.h6{
                 font-size: 16px;
                 line-height: 24px;
             }
