--- a/src/css/_page.scss
+++ b/src/css/_page.scss
@@ -5,6 +5,12 @@
     .header__logo{
         padding-top: 80px;
     }
+    .header__link{
+        @extend .header__email;
+        right: 20px;
+        left: auto;
+        color: $violet;
+    }
 }
 .page{
     padding-top: 80px;
@@ -51,25 +57,26 @@
             line-height: 54px;
             color: $black;
         }
-        h2{
-            font-size: 44px;
-            line-height: 50px;
+        h2,.h2{
+            font-size: 36px;
+            line-height: 42px;
             margin-top: 30px;
             margin-bottom: 30px;
         }
-        h3{
+        h3,.h3{
             font-size: 28px;
             line-height: 34px;
             margin-top: 30px;
             margin-bottom: 30px;
         }
-        h4{
+        h4,.h4{
             font-size: 24px;
             line-height: 30px;
             margin-top: 30px;
             margin-bottom: 30px;
         }
-        h5{
+        h6,.h6,
+        h5,.h5{
             font-size: 18px;
             line-height: 24px;
             margin-top: 30px;
@@ -80,6 +87,11 @@
             line-height: 28px;
             margin-bottom: 20px;
         }
+        ul{
+            li + li{
+                margin-top: 10px;
+            }
+        }
         blockquote{
             padding-left: 80px;
             background: url('../images/icons/quotes.svg') no-repeat left top / 55px;
@@ -87,8 +99,7 @@
         }
         img{
             @extend .img-fluid;
-            margin-top: 40px;
-            margin-bottom: 40px;
+            margin-bottom: 20px;
         }
     }
 }
