--- a/src/chunks/head.pug
+++ b/src/chunks/head.pug
@@ -5,4 +5,4 @@ head
     title SOHO студия
 
     link(href='./css/jquery.jscrollpane.css', rel='stylesheet')
-    link(href='./css/style.min.css', rel='stylesheet')
+    link(href='./css/style.css', rel='stylesheet')
