--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -44,6 +44,8 @@
 
         width: 70px;
 
+        z-index: 99;
+
         padding: 20px;
         border-radius: 50%;
         background: $darkblue;
