--- a/src/chunks/footer.pug
+++ b/src/chunks/footer.pug
@@ -30,3 +30,14 @@ footer.footer
                         a.footer__navbar__link(href="#") Блог
                     li.footer__navbar__item.last
                         a.footer__navbar__link(href="#") Дизайн
+
+svg.go-to-top(x="0px" y="0px" viewBox="0 0 477.175 477.175" xml:space="preserve")
+    g
+        path(d="M145.188,238.575l215.5-215.5c5.3-5.3,5.3-13.8,0-19.1s-13.8-5.3-19.1,0l-225.1,225.1c-5.3,5.3-5.3,13.8,0,19.1l225.1,225   c2.6,2.6,6.1,4,9.5,4s6.9-1.3,9.5-4c5.3-5.3,5.3-13.8,0-19.1L145.188,238.575z")
+.modal.modal_dark#callModal
+    p.modal__title Оставьте сообщение для нас и мы перезвоним
+    form.form.form_column(action="")
+        input.input-text(type="text" placeholder="Ваше имя" value="")
+        input.in-phone.input-text(type="tel" placeholder="Контактный телефон" value="")
+        textarea.input-text(name="", placeholder="Опишите здесь, каких целей вы хотите достичь с помощью вашего сайта")
+        button.btn.btn_primary(type="submit") Обсудим проект
