--- a/src/chunks/head.pug
+++ b/src/chunks/head.pug
@@ -4,5 +4,6 @@ head
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     title SOHO студия
 
+    link(href='./css/jquery.fancybox.min.css', rel='stylesheet')
     link(href='./css/jquery.jscrollpane.css', rel='stylesheet')
     link(href='./css/style.css', rel='stylesheet')
