--- a/src/css/_form.scss
+++ b/src/css/_form.scss
@@ -48,4 +48,13 @@
             margin-top: 30px;
         }
     }
+
+    &_column{
+        .input-text + .input-text{
+            margin-top: 30px;
+        }
+        .input-text + .btn{
+            margin-top: 30px;
+        }
+    }
 }
