--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -589,7 +589,7 @@ a{
             }
         }
         &_padding{
-            z-index: 11;
+            z-index: 10;
             .element{
                 position: absolute;
                 left: 0;
@@ -793,6 +793,56 @@ a{
     list-style: none;
     &__item {
         display: inline-block;
+    }
+}
+/* Modal */
+.modal{
+    display: none;
+    max-width: 100%;
+    border-radius: 4px;
+    overflow: hidden;
+
+    transition: all .5s;
+
+    * {
+        color: $white;
+    }
+    .input-text{
+        text-transform: none;
+    }
+
+    &_dark{
+        background: linear-gradient(45deg, #543093 32%, #2a16bc 100%);
+        .btn{
+            border: 4px solid #ffffff;
+        }
+    }
+
+    &#callModal{
+        width: 600px;
+        text-align: center;
+    }
+}
+
+.go-to-top{
+    @extend .header__nav;
+
+    height: 70px;
+    opacity: 0;
+    display: none;
+
+    top: auto;
+    bottom: 20px;
+
+    transform: rotate(90deg);
+    fill: $white;
+
+    &.active{
+        display: block;
+        opacity: .4;
+        &:hover{
+            opacity: 1;
+        }
     }
 }
 
