--- a/src/css/_form.scss
+++ b/src/css/_form.scss
@@ -50,9 +50,9 @@
     }
 
     &_column{
-        .input-text + .input-text{
-            margin-top: 30px;
-        }
+        .has-validation + .input-text,
+        .input-text + .has-validation,
+        .input-text + .input-text,
         .input-text + .btn{
             margin-top: 30px;
         }
