--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -68,6 +68,8 @@
         bottom: 0;
         min-height: 100vh;
 
+        z-index: 101;
+
         transform: translateX(100%);
         transition: .5s;
 
